--- a/src/app/bikes/bikes.component.html
+++ b/src/app/bikes/bikes.component.html
@@ -10,6 +10,7 @@
     </form> 
     <br>  
 <button routerLink="/">HOme page</button>
+<button class="btn btn-primary">CLick</button>
 <br>
 <h3 *ngIf='isAdded'>{{ confirmation }}</h3>
 </div>
